--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>i can puch code</h1>
+    <h2>rtgrtgh</h2>
+    <h3>ergtrthg</h3>
+    <h4>trgh</h4>
     <p>sdgtg</p>
 
 </body>
